--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Bienvenido al Test de Altas Capacidades Intelectuales</h1>
+        <h1>Bienvenido al Test orientativo de Altas Capacidades Intelectuales</h1>
         <p>Por favor, selecciona tu grupo etario para comenzar:</p>
         <div class="group-buttons">
             <button onclick="iniciarTest('ninos')">Niños (hasta 12 años)</button>
